(lang dune 3.20)

(name OCamLox)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Matt")

(maintainers "Matt Warren")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name OCamLox)
 (synopsis "OCaml Tree walk interp for Lox")
 (description "")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
